# ZVideoGridPlayer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  run.py  settings.json  start.bat
lang/: en.json
scr/ZVideoGridPlayer/: __init__.py  config.py  language_manager.py  main.py  settings_manager.py  ui_components.py  video_player.py
scr/ZVideoGridPlayer/lang/: ru.json  zh.json
scr/ZVideoGridPlayer/oldver/ver01/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver02/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver03/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver04/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver05/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver06/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver07/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver08/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver09/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver10/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver11/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver12/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver13stable/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver14/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver15/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver16/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver17/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver18/: ZVideoGridPlayer.py
scr/ZVideoGridPlayer/oldver/ver19stable/: ZVideoGridPlayer.py
scr/lang/: en.json  ru.json
(+5 files in other folders)
